Fix details description creation and simplify forms
