# user-service/src/routes/index.routes.js
@@ -7,7 +7,6 @@ const HealthConditionController = require('../controllers/health_condition.contr
 const PreliminaryController = require('../controllers/preliminary.controller.js');
 const RecoveryController = require('../controllers/recovery.controller.js');
 const WorkImpactController = require('../controllers/work_impact.controller.js');
-const ReportGroupController = require('../controllers/report_group.controller.js');
 const jwtMiddleware = require('../middlewares/jwt.middleware.js');
 const asyncHandler = require('../helper/asyncHandler.js');
 const router = Router();
@@ -26,20 +25,17 @@ router.use(jwtMiddleware);
 
 
 
-router.post('/report-groups', asyncHandler(ReportGroupController.create));
-router.get('/report-groups/:id', asyncHandler(ReportGroupController.getByID));
-router.put('/report-groups/:id', asyncHandler(ReportGroupController.update));
-router.delete('/report-groups/:id', asyncHandler(ReportGroupController.delete));
+router.post('/recovery', asyncHandler(RecoveryController.create));
+router.get('/recovery', asyncHandler(RecoveryController.list));
+router.get('/recovery/:id', asyncHandler(RecoveryController.getByID));
+router.put('/recovery/:id', asyncHandler(RecoveryController.update));
+router.delete('/recovery/:id', asyncHandler(RecoveryController.delete));
 
-router.post('/report-groups/:id/recovery', asyncHandler(RecoveryController.create));
-router.get('/report-groups/:id/recovery', asyncHandler(RecoveryController.getByID));
-router.put('/report-groups/:id/recovery', asyncHandler(RecoveryController.update));
-router.delete('/report-groups/:id/recovery', asyncHandler(RecoveryController.delete));
-
-router.post('/report-groups/:id/work-impact', asyncHandler(WorkImpactController.create));
-router.get('/report-groups/:id/work-impact', asyncHandler(WorkImpactController.getByID));
-router.put('/report-groups/:id/work-impact', asyncHandler(WorkImpactController.update));
-router.delete('/report-groups/:id/work-impact', asyncHandler(WorkImpactController.delete));
+router.post('/work-impact', asyncHandler(WorkImpactController.create));
+router.get('/work-impact', asyncHandler(WorkImpactController.list));
+router.get('/work-impact/:id', asyncHandler(WorkImpactController.getByID));
+router.put('/work-impact/:id', asyncHandler(WorkImpactController.update));
+router.delete('/work-impact/:id', asyncHandler(WorkImpactController.delete));
 
 router.post('/insurance-details', asyncHandler(InsuranceDetailController.create));
 router.get('/insurance-details/:id', asyncHandler(InsuranceDetailController.getByID));
